# sp_odesi

./: .gitignore  Dockerfile  README.md  docker-compose.yml  module_log.py  odesi_tables.py  pyproject.toml  requirements.txt  seeding_tables.py
tests/: test_sp_odesi.py
