[tool.poetry]
name = "sp_odesi"
version = "0.1.0"
description = ""
authors = ["Guinsly Mondesir <guinslym@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
peewee = "^3.13.2"
xlrd = "^1.2"
pandas = "^0.25.3"
openpyxl = "^3.0.3"
XlsxWriter = "^1.2"
environs = "^7.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pdbpp = "^0.10.2"
ptpython = "^3.0.1"
pytest-sugar = "^0.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
